# Dual-Intepreter-Demo

./: .gitignore  CMakeLists.txt  QtGUI.py  README.md  bridge.cxx  bridge.hxx  bridge.i  bridgePYTHON_wrap.cxx  main.cxx
